--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,8 @@
 ### mw htaccess
 RewriteEngine on
 
+RewriteCond %{HTTPS} =on
+RewriteRule ^(.*)$ http://%{HTTP_HOST}/docs/$1 [R=301,L]
  
 #goes to the index.php file
 RewriteCond %{REQUEST_URI} !\.(gif|jpg|jpeg|png|js|css|ttf|woff)$
