--- a/.github/workflows/build-and-upload.yml
+++ b/.github/workflows/build-and-upload.yml
@@ -9,6 +9,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Inject slug/short variables
+      uses: rlespinasse/github-slug-action@v3.x
+      
     - name: Zip the files
       run: |
         rm -rf .git
