--- a/.github/workflows/build-and-upload.yml
+++ b/.github/workflows/build-and-upload.yml
@@ -17,10 +17,10 @@ jobs:
         rm -rf .git
         rm -rf .github
         find . \( -name ".git" -o -name ".gitignore" -o -name ".gitmodules" -o -name ".gitattributes" \) -exec rm -rf -- {} +
-        zip -r microweber-${{ env.GITHUB_REF_SLUG }}.zip `ls -A`
+        zip -r microweber-docs-${{ env.GITHUB_REF_SLUG }}.zip `ls -A`
     - name: Upload zip
       run: |
         ls -A
         echo insecure >> ~/.curlrc
-        curl -T microweber-docs-${{ env.GITHUB_REF_SLUG }}.zip ftp://${{ secrets.FTP_USERNAME }}:${{ secrets.FTP_PASSWORD }}@${{ secrets.FTP_HOST }}/${{ env.GITHUB_REF_SLUG }}/ --ftp-create-dirs --no-epsv
+        curl -T microweber-docs-${{ env.GITHUB_REF_SLUG }}.zip ftp://${{ secrets.FTP_USERNAME }}:${{ secrets.FTP_PASSWORD }}@${{ secrets.FTP_HOST }}/builds/${{ env.GITHUB_REF_SLUG }}/ --ftp-create-dirs --no-epsv
   
